# pyDVS

./: .gitignore  README.md  looming_stimulus.py  mnist_to_spikes.py  monkey.avi  numba_tests.ipynb  pyproject.toml  sequence_to_spikes.py  setup.cfg  setup.py  spynnaker_test.py  stand_alone.py  stand_alone_-_threaded.py  stand_alone_-_threaded___VCAM.py  stand_alone_threaded.py  stand_alone_threaded_VCAM.py  test-vid.py  test.py  virtual_cam_test.py
ocl_kernel_cache/74f5c74d09e7d07f46c013f64d840ba0/: binary  info  source.cl
ocl_kernel_cache/83b936845bbf522151cae167923ecd06/: binary  source.cl
ocl_kernel_cache/8e8453102f9bd92463a60f1686802f2d/: binary  source.cl
ocl_kernel_cache/f153a2201ae155414843e46d9f516e7d/: binary  source.cl
pyDVS/: __init__.py  numpy_dvs.py  opencl_dvs.py  pydvs.py
pydvs/: cam_sim.pyx  cdefines.pxd  decode_spikes.pyx  encode_spikes.pyx  external_dvs_emulator_device.py  external_dvs_emulator_device_wrapper.py  generate_spikes.pxd  generate_spikes.pyx  generate_spikes_uncoded.pyx  math_utils.pxd  math_utils_np.pyx  numba_nvs.py  nvs.pyx  pdefines.py  virtual_cam.py  visualization.pxd  visualization.pyx
pydvs/cpp/: Makefile  dvs_emu.cpp  dvs_emu.hpp  dvs_op.cpp  dvs_op.hpp  nvs_emu.cpp  nvs_emu.hpp  nvs_op.cpp  nvs_op.hpp  test  test.cpp
